# robust-pca

./: LICENSE  README.md  robust-pca.cabal
nix/: default.nix  either.nix  foldl-statistics.nix  foldl.nix  hmatrix.nix  nixpkgs.json  openblas.nix  pkgs.nix  rebase.nix  release.nix
src/: RobustPCA.hs  Utils.hs
